Fix report tab alignment

--- a/arches/app/media/css/arches.scss
+++ b/arches/app/media/css/arches.scss
@@ -1290,7 +1290,6 @@ ul.tabbed-report-tab-list {
     font-size: 19px;
     line-height: 23px;
     display: block;
-    margin: 0 4px;
     text-align: center;
     padding: 13px;
 }
